// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`main should compile with basic options 1`] = `
Object {
  "default": "Macaca_nigra_self-portrait_large.jpg",
}
`;

exports[`main should compile with basic options 2`] = `"4321feb710c57ad8b5e0259f4491cc7e7a80d9a41658f5431039bc393f964de0"`;

exports[`main should compile with basic options 3`] = `
Object {
  "default": "Macaca_nigra_self-portrait_large.jpg",
}
`;

exports[`main should compile with basic options 4`] = `"4321feb710c57ad8b5e0259f4491cc7e7a80d9a41658f5431039bc393f964de0"`;

exports[`main should compile with file content override 1`] = `3`;

exports[`main should compile with file content override 2`] = `3`;

exports[`main should compile with specific file 1`] = `
Object {
  "default": "good",
}
`;

exports[`main should compile with specific file 2`] = `
Object {
  "default": "good",
}
`;
